visual fix for stock boats, made images display without cropping

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -81,8 +81,9 @@ a:hover{
 
 .imagetile{
     height:400px;
-    background-position: 
-    center;background-size: cover;
+    background-position:center;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 .configuratorImg{
